# Interactive-Analog-Clock

./: CMakeLists.txt  Clock.qml  README.md  main.cpp
components/: ClockHand.qml  CustomButton.qml
